--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,23 @@ lec_1.aux
 lec_1.synctex.gz
 lec_1.log
 lec_1.fdb_latexmk
+AlgebraicTopology.fdb_latexmk
+AlgebraicTopology.aux
+AlgebraicTopology.fls
+AlgebraicTopology.log
+AlgebraicTopology.synctex.gz
+QM3.aux
+QM3.fdb_latexmk
+*.fdb_latexmk
+*.aux
+*.gz
+*.fdb_latexmk
+*.aux
+QM3.fdb_latexmk
+QM3.synctex.gz
+QM3.fdb_latexmk
+QM3.aux
+QM3.synctex.gz
+QM3.fdb_latexmk
+QM3.aux
+*.aux
